--- a/web_gamestore/src/app/create-edit-game/create-edit-game.component.html
+++ b/web_gamestore/src/app/create-edit-game/create-edit-game.component.html
@@ -10,18 +10,19 @@
     </a>
     <div class="container card-body py-5 px-md-5 ">
         <div class="row g-1 justify-content-center">            
-            <div class="col-md-3" *ngFor="let in of counter(20);let i= index" style="padding: 15px; padding-top: 0px;">
+            <div class="col-md-3" *ngFor="let dataItem of Gamelist" style="padding: 15px; padding-top: 0px;">
                 <!-- cài animation cho game hover -->
                 <div [ngClass]="animation" (mouseover)="animation='card p-3 hoverG'" (mouseout)="animation='card p-3'">
                     <a class="pull-left" [routerLink]="['/detail_game']"
-                        routerLinkActive="router-link-active">
+                        routerLinkActive="router-link-active" (click)="detailClick(dataItem)">
                         <div class="text-center">
-                            <img src="#" alt="" width="100%" height="200px" title="Xem chi tiết"/>
+                            <img [src]=imageUrl+dataItem.Logo_Game alt="" width="100%" height="150px" title="Xem chi tiết"/>
                         </div>
                     </a>
                     <div class="product-details">
-                        <span class="font-weight-bold d-block" style="font-weight: bold;">Tên game</span>
-                        <span>Thể loại</span>
+                        <span class="font-weight-bold d-block" style="font-weight: bold;">{{dataItem.Ten_Game}}</span>
+                        <span>{{dataItem.LuotTaiXuong}} lượt tải xuống</span>
+                        <span class="font-weight-bold d-block">Giá : {{dataItem.Gia}}</span>
                         <div class="buttons d-flex flex-row row">
                             <a (click)="deleteClick()" class="col-md-6">
                                 <button class="btn btn-success cart-button
