--- a/web_gamestore/src/app/app.component.html
+++ b/web_gamestore/src/app/app.component.html
@@ -46,9 +46,9 @@
             <!-- search -->
             <div class="col-lg-2">
                 <form class="d-flex form-floating">
-                    <input class="form-control" type="search" id="IDsearch"
-                      aria-label="Search" style="background-color: white;" placeholder="Tìm kiếm">
-                      <label for="IDsearch">Tìm kiếm</label>
+                    <input class="form-floating d-flex" type="search" id="IDsearch"
+                      aria-label="Search" style="background-color: white; border: solid 1px black; border-radius: 5px;" placeholder="Tìm kiếm">
+                      <!-- <label for="IDsearch">Tìm kiếm</label> -->
                     <button class="btn btn-primary" type="submit" data-bs-toggle="tooltip" title="Tìm kiếm">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
@@ -58,7 +58,7 @@
 
             <!-- login -->
             <div class="col-lg-2">
-                <a [routerLink]="['/login']" routerLinkActive="router-link-active">
+                <a [routerLink]="['/login']" routerLinkActive="router-link-active" *ngIf="!service.checkLogin">
                     <button type="button" class="btn btn-primary pull-right"> Login
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                             fill="currentColor" class="bi bi-box-arrow-in-right" viewBox="0
@@ -71,6 +71,14 @@
                                     0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0
                                     0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
                         </svg>
+                    </button>
+                </a>
+                <a [routerLink]="['/user_profile']" routerLinkActive="router-link-active" *ngIf="service.checkLogin">
+                    <button type="button" class="btn btn-primary pull-right" (click)="clickLogout()" style="background-color: red;"> Logout
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z"/>
+                            <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+                          </svg>
                     </button>
                 </a>
             </div>
