--- a/web_gamestore/src/app/login/login.component.html
+++ b/web_gamestore/src/app/login/login.component.html
@@ -24,9 +24,9 @@
               <label class="form-check-label" for="form1Example3"> Ghi nhớ tài khoản đăng nhập </label>
             </div>
 
-            <a [routerLink]="['/user_profile']" routerLinkActive="router-link-active">
-              <button class="btn btn-primary btn-lg btn-block" type="submit" (click)="clickLogin()">Đăng nhập</button>
-            </a>
+              <a [routerLink]="['/user_profile']" routerLinkActive="router-link-active" (click)="clickLogin()">
+                <button class="btn btn-primary btn-lg btn-block" type="submit" >Đăng nhập</button>
+              </a>
             
               <hr class="my-4">
             
