--- a/web_gamestore/src/app/user-profile/user-profile.component.html
+++ b/web_gamestore/src/app/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
-<section class="card mx-4 mx-md-5 shadow-5-strong" style="margin-top: 20px;" *ngIf="checkLogin && User[0].ID_NguoiDung !='error' ">
+<section class="card mx-4 mx-md-5 shadow-5-strong" style="margin-top: 20px;" *ngIf="checkLogin">
     <div  class="container card-body py-5 px-md-5" style="width: 95%;">
       <div class="row">
         <div class="col-lg-4">
@@ -11,7 +11,7 @@
               <p class="text-muted mb-4">Cập nhật cuối : {{User[0].NgayCapNhat}}</p>
               <div class="d-flex justify-content-center mb-2">
                 <a [routerLink]="['/edit-user']" routerLinkActive="router-link-active"><button type="button" class="btn btn-primary">Chỉnh sửa thông tin</button></a>
-                <button type="button" class="btn btn-outline-primary ms-1">{{TenNhomChucNang[0].TenNhomChucNang}}</button>
+                <button type="button" class="btn btn-outline-primary ms-1" [(ngModel)]="TenNhomChucNang">{{TenNhomChucNang}}</button>
               </div>
             </div>
           </div>
@@ -34,7 +34,7 @@
                   <p class="mb-0">Ngày sinh</p>
                 </div>
                 <div class="col-sm-9">
-                  <p class="text-muted mb-0">{{User[0].NgaySinh}}</p>
+                  <p class="text-muted mb-0">{{User[0].NgaySinh.substr(0,10)}}</p>
                 </div>
               </div>
               <hr>
@@ -81,7 +81,7 @@
     </div>
   </section>
 
-<section class="card mx-4 mx-md-5 shadow-5-strong" style="margin-top: 20px;" *ngIf="!checkLogin || User[0].ID_NguoiDung=='error' ">
+<section class="card mx-4 mx-md-5 shadow-5-strong" style="margin-top: 20px;" *ngIf="!checkLogin">
   <div  class="container card-body py-5 px-md-5" style="width: 95%;">
     <div class="row">
       <div class="col-lg" style="color: red;">
