--- a/web_gamestore/src/app/game-like/game-like.component.html
+++ b/web_gamestore/src/app/game-like/game-like.component.html
@@ -26,7 +26,7 @@
                   </div>
                 </td>
                 <td>
-                  {{listYeuThich[i].NgayTai}}
+                  {{listYeuThich[i].NgayThich}}
                 </td>
                 <td>
                   <span class="badge badge-success rounded-pill d-inline">Active</span>
