--- a/web_gamestore/src/app/create-edit-user/create-edit-user.component.html
+++ b/web_gamestore/src/app/create-edit-user/create-edit-user.component.html
@@ -45,7 +45,7 @@
                         Xóa
                       </button>
                     </a>
-                    <a [routerLink]="['/edit-user']" routerLinkActive="router-link-active" class="col-md-6">
+                    <!-- <a [routerLink]="['/edit-user']" routerLinkActive="router-link-active" class="col-md-6">
                       <button type="button" class="btn btn-light" style="font-size: 60%;  border: solid 1px black; border-radius: 50px; color: green;" >
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2-square" viewBox="0 0 16 16">
                         <path d="M3 14.5A1.5 1.5 0 0 1 1.5 13V3A1.5 1.5 0 0 1 3 1.5h8a.5.5 0 0 1 0 1H3a.5.5 0 0 0-.5.5v10a.5.5 0 0 0 .5.5h10a.5.5 0 0 0 .5-.5V8a.5.5 0 0 1 1 0v5a1.5 1.5 0 0 1-1.5 1.5H3z"/>
@@ -53,7 +53,7 @@
                       </svg>
                         Kiểm duyệt
                       </button>
-                    </a>
+                    </a> -->
                 </td>
               </tr>
             </tbody>
