--- a/web_gamestore/src/app/create-edit-game/edit-game/edit-game.component.html
+++ b/web_gamestore/src/app/create-edit-game/edit-game/edit-game.component.html
@@ -4,7 +4,7 @@
 
       <div class="row d-flex justify-content-center">
         <div class="col-lg-8">
-          <h2 class="fw-bold mb-5">Sửa game</h2>
+          <h2 class="fw-bold mb-5">Sửa thông tin game</h2>
           <form>  
             
             <div class="form-floating mb-4">
