--- a/web_gamestore/src/app/create-edit-game/create-game/create-game.component.html
+++ b/web_gamestore/src/app/create-edit-game/create-game/create-game.component.html
@@ -53,7 +53,7 @@
             </div>
 
             <div class="form-floating mb-4">
-              <input type="text" id="mota" class="form-control" placeholder="Mô tả chi tiết" [(ngModel)]="MoTaChiTiet"  [ngModelOptions]="{standalone: true}"/>
+              <textarea type="text" id="mota" class="form-control" placeholder="Mô tả chi tiết" [(ngModel)]="MoTaChiTiet" [ngModelOptions]="{standalone: true}"> </textarea>
               <label for="mota">Mô tả chi tiết</label>
             </div>
 
