--- a/web_gamestore/src/app/register/register.component.html
+++ b/web_gamestore/src/app/register/register.component.html
@@ -53,7 +53,7 @@
               
               <!-- Date input -->
               <div class="form-floating mb-4">
-                <input type="date" id="date" class="form-control" placeholder="Ngày sinh" [(ngModel)]="NgaySinh" [ngModelOptions]="{standalone: true}"/>
+                <input type="date" id="date" pattern="\d{2}/\d{2}/\d{4}" class="form-control" placeholder="Ngày sinh" [(ngModel)]="NgaySinh" [ngModelOptions]="{standalone: true}"/>
                 <label class="form-label pull-left" for="date">Ngày sinh</label>
               </div>
 
@@ -69,10 +69,10 @@
                 <label for="address">Địa chỉ</label>
               </div>
               
-              <!-- <select class="form-select mb-4" [(ngModel)]="TenNhomChucNang" [ngModelOptions]="{standalone: true}">
+              <select class="form-select mb-4" [(ngModel)]="TenNhomChucNang" [ngModelOptions]="{standalone: true}">
                 <option selected style="background-color: gray; color: white;">--Chọn nhóm chức năng--</option>
                 <option *ngFor="let item of listNhomChucNang">{{item.TenNhomChucNang}}</option>
-              </select> -->
+              </select>
               <!-- Checkbox -->
               <div class="form-check d-flex justify-content-center mb-4 pull-left">
                 <input class="form-check-input me-2" type="checkbox" value="" id="rules">
